<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HubDemo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="status">Connection status</string>
    <string name="calculate">Calculate</string>
    <string name="value2">Value2</string>
    <string name="minus">Minus</string>
    <string name="plus">Plus</string>
    <string name="operator">Operator</string>
    <string name="value1">Value1</string>
    <string name="show_all_calculations">Show all calculations form all users</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    
</resources>